--- a/src/scss/partials/footer/f-layout.scss
+++ b/src/scss/partials/footer/f-layout.scss
@@ -13,6 +13,7 @@ li{
 #home,#projects,#about,#contact,#blog{
     color:$typeColor;
     text-decoration: none;
+    font-weight: 900;
 }
 
 .footer-area{
